--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "april",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "type": "module",
   "description": "a simple api that listens for webhooks and reacts to them (maybe sometimes a bit snarky)",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "node --env-file=./.env index.js"
   },
   "author": "iamthe-Wraith",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3",
-    "ts-node": "^10.9.2"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21"
+    "express": "^4.18.3"
   }
 }
